--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="_7" data-value="7">7</button>
             <button id="_8" data-value="8">8</button>
             <button id="_9" data-value="9">9</button>
-            <button id="_multiply" data-value="*">x</button>
+            <button id="_multiply" data-value="*">×</button>
 
             <button id="_4"  data-value="4">4</button>
             <button id="_5"  data-value="5">5</button>
